--- a/.github/workflows/updateVersions.yml
+++ b/.github/workflows/updateVersions.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.ref_type == 'branch' && startsWith(github.event.ref, 'release/') }}
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
     
       - name: get-release-branch-version
         uses: valadas/get-release-branch-version@v1
