--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       uses: ncipollo/release-action@v1.6.1
       with:
         artifacts: Resources/*.zip
-        body: Dnn Language pack
+        body: Dnn ${{ github.event.repository.name }} version ${{ steps.version.outputs.versionString }}
         tag: v${{ steps.version.outputs.major }}.${{ steps.version.outputs.minor }}.${{ steps.version.outputs.patch }}
         # The Github token.
         token: ${{ secrets.GITHUB_TOKEN }}
